docs: update readme.md

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-starter",
-  "version": "0.0.0",
+  "name": "batch-api-ui",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
